--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,14 @@
       <a class="navbar-brand" routerLink="">Hack Anon - Home</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="about">About</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="container">
   <h1>{{title}}</h1>
+  <router-outlet></router-outlet>
 </div>
 
 <footer class="footer">
