--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,25 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" routerLink="">Hack Anon - Home</a>
+
+<div class="masterCompBody">
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="">Hack Anon - Home</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="about">About</a></li>
+        <li><a routerLink="admin">Admin</a></li>
+      </ul>
     </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a routerLink="about">About</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
 
-<div class="container">
-  <h1>{{title}}</h1>
-  <router-outlet></router-outlet>
-</div>
-
-<footer class="footer">
   <div class="container">
+    <router-outlet></router-outlet>
   </div>
-</footer>
+
+  <footer class="footer">
+    <div class="container">
+    </div>
+  </footer>
+
+</div>
