add content to admin route

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,10 @@
-<h4>Welcome Admin<h4>
+
+<div class="container">
+
+  <h2>Welcome Admin</h2>
+
+  <div>
+    <app-roster></app-roster>
+  </div>
+
+</div>
