--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -1,3 +1,8 @@
-<h4>Front Page!</h4>
-<hr>
-<app-roster>loading...</app-roster>
+<div id="banner">
+</div>
+
+<div class="container">
+  <h4>Front Page!</h4>
+  <hr>
+  <app-roster>loading...</app-roster>
+</div>
