--- a/src/app/roster/roster.component.html
+++ b/src/app/roster/roster.component.html
@@ -2,10 +2,12 @@
   <div *ngFor="let member of members | async">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">{{member.name}}</h3>
+        <h2 class="panel-title">{{member.name}}</h2>
       </div>
-      <div class="panel-body">
-        {{member.role}}
+      <div *ngIf="currentRoute === '/admin'" class="panel-body">
+        <h4>Role: {{member.role}}</h4>
+        <h5>Tech: {{member.tech}}</h5>
+        <p>Bio: {{member.bio}}</p>
       </div>
     </div>
   </div>
