--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,8 +1,11 @@
-<p>  Detail </p>
+<div class="container">
+  <h1>{{(memberToDisplay | async)?.name}}'s Profile</h1>
 
-<div>
-  <h3>{{(memberToDisplay | async)?.name}}</h3>
-  <h4>{{(memberToDisplay | async)?.role}}</h4>
-  <p>{{(memberToDisplay | async)?.tech}}</p>
-  <p>{{(memberToDisplay | async)?.bio}}</p>
+  <div>
+    <h3>{{(memberToDisplay | async)?.role}}</h3>
+    <p>Tech: {{(memberToDisplay | async)?.tech}}</p>
+    <p>BIO:</p>
+    <p>{{(memberToDisplay | async)?.bio}}</p>
+  </div>
+
 </div>
