add 'new member' feature

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,39 @@
-<h4>About Page</h4>
+<div class="container">
+
+  <h3>What is a hacker?</h3>
+  <p>1) Eric Raymond, compiler of <a href="https://www.amazon.com/New-Hackers-Dictionary-3rd/dp/book-citations/0262181789">The New Hacker's Dictionary</a>, defines a hacker as a clever programmer. A "good hack" is a clever solution to a programming problem and "hacking" is the act of doing it. Raymond lists five possible characteristics that qualify one as a hacker, which we paraphrase here:</p>
+
+    <ul>
+      <li>
+        A person who enjoys learning details of a programming language or system
+      </li>
+      <li>
+        A person who enjoys actually doing the programming rather than just theorizing about it
+      </li>
+      <li>
+        A person capable of appreciating someone else's hacking
+      </li>
+      <li>
+        A person who picks up programming quickly
+      </li>
+      <li>
+        A person who is an expert at a particular programming language or system, as in "UNIX hacker"
+      </li>
+      <li>
+        Raymond deprecates the use of this term for someone who attempts to crack someone else's system or otherwise uses programming or expert knowledge to act maliciously. He prefers the term <a href="http://searchsecurity.techtarget.com/definition/cracker">cracker</a> for this meaning.
+      </li>
+    </ul>
+
+  <p>2) The term hacker is used in popular media to describe someone who attempts to break into computer systems. Typically, this kind of hacker would be a proficient programmer or engineer with sufficient technical knowledge to understand the weak points in a security system. For more on this usage, see cracker.</p>
+  <hr>
+
+  <h3>Why anonymous?</h3>
+
+  <h4>Articles:</h4>
+  <ul>
+    <li><a href="https://us.norton.com/mostdangeroustown2/bonus/why-freedom-and-anonymity-on-the-internet-is-important">Norton security</a>
+    </li>
+  </ul>
+
+
+</div>
