--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,8 +3,49 @@
 
   <h2>Welcome Admin</h2>
 
+  <button class="btn btn-default btn-sm" (click)="addMemberClicked()">Add Member</button>
+
+  <div class="newMemberArea" *ngIf="showNewMemberForm === true">
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Add New Member</h3>
+      </div>
+      <div class="panel-body">
+        <div>
+          <div>
+            <label>Member's Name</label>
+            <br>
+            <input #newName>
+          </div>
+
+          <div>
+            <label>Member's Role</label>
+            <br>
+            <input #newRole>
+          </div>
+
+          <div>
+            <label>Member's Tech</label>
+            <br>
+            <input #newTech>
+          </div>
+
+          <div>
+            <label>Member's Biography</label>
+            <br>
+            <input #newBio>
+          </div>
+
+          <button (click)="submitForm(newName.value, newRole.value, newTech.value, newBio.value); newName.value=''; newRole.value=''; newTech.value=''; newBio.value='';">Save</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
   <div>
-    <app-roster></app-roster>
+    <app-roster>Loading...</app-roster>
   </div>
 
 </div>
