--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" routerLink="">Hack Anon - Home</a>
+        <a class="navbar-brand" routerLink="">Hack Anon</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a routerLink="about">About</a></li>
@@ -13,9 +13,7 @@
     </div>
   </nav>
 
-
   <router-outlet></router-outlet>
-
 
   <footer class="footer">
     <div class="container">
