--- a/src/app/roster/roster.component.html
+++ b/src/app/roster/roster.component.html
@@ -1,13 +1,17 @@
-<h3>Roster:</h3>
+<h3>Member Roster:</h3>
   <div *ngFor="let member of members | async">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}}</h1>
+        <!-- <button class="memberEdit btn btn-default btn-sm" *ngIf="currentRoute === '/admin'">Edit</button> -->
+        <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}} - ID: {{member.$key}}</h1>
       </div>
       <div *ngIf="currentRoute === '/admin'" class="panel-body">
         <h4>Role: {{member.role}}</h4>
         <h5>Tech: {{member.tech}}</h5>
         <p>Bio: {{member.bio}}</p>
+
+        <app-edit-member [selectedMember]="member"></app-edit-member>
+
       </div>
     </div>
   </div>
