--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -2,9 +2,9 @@
   <h1>{{(memberToDisplay | async)?.name}}'s Profile</h1>
 
   <div>
-    <p>Role: {{(memberToDisplay | async)?.role}}</p>
-    <p>Tech: {{(memberToDisplay | async)?.tech}}</p>
-    <p>Bio: {{(memberToDisplay | async)?.bio}}</p>
+    <h4><b>Role:</b> {{(memberToDisplay | async)?.role}}</h4>
+    <h4><b>Tech:</b> {{(memberToDisplay | async)?.tech}}</h4>
+    <p><b>Bio:</b> {{(memberToDisplay | async)?.bio}}</p>
   </div>
 
 </div>
