--- a/src/app/roster/roster.component.html
+++ b/src/app/roster/roster.component.html
@@ -3,12 +3,13 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <!-- <button class="memberEdit btn btn-default btn-sm" *ngIf="currentRoute === '/admin'">Edit</button> -->
-        <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}} - ID: {{member.$key}}</h1>
+        <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}}<span class="DBID" *ngIf="currentRoute === '/admin'">DB ID: {{member.$key}}</span></h1>
+
       </div>
       <div *ngIf="currentRoute === '/admin'" class="panel-body">
-        <h4>Role: {{member.role}}</h4>
-        <h5>Tech: {{member.tech}}</h5>
-        <p>Bio: {{member.bio}}</p>
+        <h4><b>Role:</b> {{member.role}}</h4>
+        <h4><b>Tech:</b> {{member.tech}}</h4>
+        <p><b>Bio:</b> {{member.bio}}</p>
 
         <app-edit-member [selectedMember]="member"></app-edit-member>
 
