--- a/src/app/edit-member/edit-member.component.html
+++ b/src/app/edit-member/edit-member.component.html
@@ -4,16 +4,19 @@
 
   <div class="container">
     <h3>Edit Member</h3>
-    <label>New Member Name:</label>
+    <label>Name:</label>
     <input [(ngModel)]="selectedMember.name">
     <br>
-    <label>New Member Role:</label>
+    <label>Role:</label>
     <input [(ngModel)]="selectedMember.role">
     <br>
-    <label>New Member Tech:</label>
+    <label>Tech:</label>
     <input [(ngModel)]="selectedMember.tech">
     <br>
-    <label>New Member Bio: </label>
+    <label>Years served:</label>
+    <input [(ngModel)]="selectedMember.years">
+    <br>
+    <label>Bio: </label>
     <textarea [(ngModel)]="selectedMember.bio" rows="4" cols="45" ></textarea>
     <br>
     <button class="btn btn-success btn-sm" (click)="saveClicked(selectedMember)">SAVE</button>
