--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -4,6 +4,7 @@
   <div>
     <h4><b>Role:</b> {{(memberToDisplay | async)?.role}}</h4>
     <h4><b>Tech:</b> {{(memberToDisplay | async)?.tech}}</h4>
+    <h4><b>Years of service:</b> {{(memberToDisplay | async)?.years}}</h4>
     <p><b>Bio:</b> {{(memberToDisplay | async)?.bio}}</p>
   </div>
 
