--- a/src/app/roster/roster.component.html
+++ b/src/app/roster/roster.component.html
@@ -1,18 +1,28 @@
-<h3>Member Roster:</h3>
-  <div *ngFor="let member of members | async">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <!-- <button class="memberEdit btn btn-default btn-sm" *ngIf="currentRoute === '/admin'">Edit</button> -->
-        <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}}<span class="DBID" *ngIf="currentRoute === '/admin'">DB ID: {{member.$key}}</span></h1>
+<h2>Clan Members</h2>
 
-      </div>
-      <div *ngIf="currentRoute === '/admin'" class="panel-body">
-        <h4><b>Role:</b> {{member.role}}</h4>
-        <h4><b>Tech:</b> {{member.tech}}</h4>
-        <p><b>Bio:</b> {{member.bio}}</p>
+<p>Filter users </p>
+<select (change)="onChange($event.target.value)">
+  <option value="all" selected="selected">All Clan Members</option>
+  <option value="vets">Veterans</option>
+  <option value="recruits">New recruits</option>
+</select>
+<br>
+<br>
 
-        <app-edit-member [selectedMember]="member"></app-edit-member>
+<div *ngFor="let member of members | async | years:desiredFilter">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}}<span class="DBID" *ngIf="currentRoute === '/admin'">DB ID: {{member.$key}}</span></h1>
 
-      </div>
+    </div>
+    <div *ngIf="currentRoute === '/admin'" class="panel-body">
+      <h4><b>Role:</b> {{member.role}}</h4>
+      <h4><b>Tech:</b> {{member.tech}}</h4>
+      <h4><b>Years of service:</b> {{member.years}}</h4>
+      <p><b>Bio:</b> {{member.bio}}</p>
+
+      <app-edit-member [selectedMember]="member"></app-edit-member>
+
     </div>
   </div>
+</div>
