--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a routerLink="about">About</a></li>
+        <li><a routerLink="forum">Forum</a></li>
         <li><a routerLink="admin">Admin</a></li>
       </ul>
     </div>
