--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,17 @@
 
 <div class="masterCompBody">
 
-  <nav class="navbar navbar-default">
+  <!-- <nav class="navbar navbar-default"> -->
+  <nav class="navbar navbar-expand-md">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" routerLink="">Hack Anon</a>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="about">About</a></li>
-        <li><a routerLink="about2">About2</a></li>
-        <li><a routerLink="forum">Forum</a></li>
-        <li><a routerLink="admin">Admin</a></li>
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="about2">About2</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="forum">Forum</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="admin">Admin</a></li>
       </ul>
     </div>
   </nav>
@@ -19,7 +20,6 @@
 
   <footer class="footer">
     <div class="container">
-      test footer
     </div>
   </footer>
 
