--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,17 +8,40 @@
   margin-bottom: 0;
 }
 
+.nav-link {
+  color: black;
+  font-size: 20px;
+}
+
+.nav-item:hover {
+  font-style: italic;
+  background-color: lightgrey;
+  color: white;
+  border-radius: 4px;
+  border-color: white;
+  border-style: none;
+}
+
 .masterCompBody {
   font-family: 'PT Mono', monospace;
   color: green;
 }
 
 .navbar-brand {
+  background-color: white;
   font-family: 'Electrolize', sans-serif;
-  font-size: 2em;
+  font-size: 32px;
   color: #22313F ;
-  text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.03em;
   text-shadow: -0.1em -0.05em 0 lightgreen;
+}
+.navbar-brand:hover {
+  color: lightgreen;
+  text-shadow: -0.2em -0.10em 0 black;
+
+
+  border-radius: 3px;
+  border-color: white;
+  border-style: none;
 }
