--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="masterCompBody">
 
   <!-- <nav class="navbar navbar-default"> -->
+  <!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark"> -->
   <nav class="navbar navbar-expand-md">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -9,7 +10,6 @@
       </div>
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="about2">About2</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="forum">Forum</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="admin">Admin</a></li>
       </ul>
