--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -1,4 +1,5 @@
 #banner {
+  margin-bottom: 30px;
   background-image: url("https://i.ytimg.com/vi/OyRW9uFSmh0/maxresdefault.jpg");
   background-position: center;
   width: 100%;
