--- a/src/app/roster/roster.component.html
+++ b/src/app/roster/roster.component.html
@@ -8,23 +8,25 @@
   <option value="vets">Veterans</option>
   <option value="recruits">New recruits</option>
 </select>
+
 <br>
 <br>
 
-<div *ngFor="let member of members | async | years:desiredFilter">
+<div *ngFor="let member of members | async | years:desiredFilter; index as i;">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h1 class="panel-title" (click)="goToDetailPage(member)">{{member.name}}<span class="DBID" *ngIf="currentRoute === '/admin'">DB ID: {{member.$key}}</span></h1>
-
+      <h1 class="panel-title" (click)="goToDetailPage(member, i)">{{member.name}}
+        <span class="DBID" *ngIf="currentRoute === '/admin'">DB ID: {{i}}</span>
+      </h1>
     </div>
+
     <div *ngIf="currentRoute === '/admin'" class="panel-body">
       <h4><b>Role:</b> {{member.role}}</h4>
       <h4><b>Tech:</b> {{member.tech}}</h4>
       <h4><b>Years of service:</b> {{member.years}}</h4>
       <p><b>Bio:</b> {{member.bio}}</p>
-
       <app-edit-member [selectedMember]="member"></app-edit-member>
-
     </div>
+
   </div>
 </div>
